Layer displays in the same order as Photoshop. Layer groups are displayed in indents, like PS. Added support for setting anchor points other than center.

--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -75,6 +75,7 @@
     <Compile Include="PsdFile\RleRowLengths.cs" />
     <Compile Include="PsdFile\RleWriter.cs" />
     <Compile Include="PsdFile\Util.cs" />
+    <Compile Include="TextureResize.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
