--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -41,17 +41,23 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEditor">
-      <HintPath>..\..\..\..\Program Files\Unity5\Editor\Data\Managed\UnityEditor.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Unity\Editor\Data\Managed\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\Program Files\Unity5\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\..\..\Program Files\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PSDModule\Editor\PsdBuilder.cs" />
     <Compile Include="PSDModule\Editor\PSDEditorWindow.cs" />
     <Compile Include="PSDModule\Editor\PSDExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSDModule\Editor\PsdExportSettings.cs" />
+    <Compile Include="PSDModule\Editor\PsdFileInfo.cs" />
+    <Compile Include="PSDModule\Editor\PSDLayerGroupInfo.cs" />
     <Compile Include="PSDModule\Editor\PSDPostProcessor.cs" />
     <Compile Include="PSDModule\PsdFile\Exceptions.cs" />
     <Compile Include="PSDModule\PsdFile\ImageResource.cs" />
